--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -236,26 +236,48 @@
                 app:layout_constraintStart_toStartOf="@+id/editRating" />
 
             <EditText
-                android:id="@+id/editTag"
+                android:id="@+id/editPossession"
                 android:layout_width="350dp"
                 android:layout_height="41dp"
                 android:layout_marginTop="24dp"
                 android:ems="10"
-                android:hint="Tag"
+                android:hint="デジタル"
                 android:inputType="textPersonName"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editRating" />
 
             <TextView
-                android:id="@+id/textTag"
+                android:id="@+id/textPossession"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
-                android:text="タグ"
-                app:layout_constraintBottom_toTopOf="@+id/editTag"
-                app:layout_constraintStart_toStartOf="@+id/editTag" />
+                android:text="所持状況"
+                app:layout_constraintBottom_toTopOf="@+id/editPossession"
+                app:layout_constraintStart_toStartOf="@+id/editPossession" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="256dp"
+                android:layout_height="72dp"
+                android:layout_marginTop="12dp"
+                android:text="登録"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editPossession"
+                tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text=""
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
