--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#EAD1A8">
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -17,7 +18,6 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:background="#FFFFFF"
             android:orientation="vertical">
 
             <TextView
