--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,4 +17,13 @@
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
     </group>
+
+    <item android:title="設定">
+        <menu>
+        <item
+            android:id="@+id/nav_setting"
+            android:icon="@android:drawable/ic_menu_preferences"
+            android:title="@string/menu_setting" />
+        </menu>
+    </item>
 </menu>
