--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -1,21 +1,31 @@
+<?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation_graph"
-    app:startDestination="@id/navi_smile">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mobile_navigation"
+    app:startDestination="@+id/nav_home">
 
-    <fragment android:id="@+id/navi_smile"
-        android:name="com.example.bookshelf.ui.home.HomeFragment"
-        android:label="Fragment1"/>
+    <fragment
+        android:id="@+id/nav_home"
+        android:name="com.example.bookshelf.ui.home2.Home2Fragment"
+        android:label="@string/menu_home"
+        tools:layout="@layout/fragment_home" />
 
-    <fragment android:id="@+id/navi_pets"
-        android:name="com.example.bookshelf.ui.home.HomeFragment"
-        android:label="Fragment2"/>
+    <fragment
+        android:id="@+id/nav_gallery"
+        android:name="com.example.bookshelf.ui.home2.Home2Fragment"
+        android:label="@string/menu_gallery"
+        tools:layout="@layout/fragment_create_top" />
 
-    <fragment android:id="@+id/navi_sun"
-        android:name="com.example.bookshelf.ui.home.HomeFragment"
-        android:label="Fragment3"/>
+    <fragment
+        android:id="@+id/nav_slideshow"
+        android:name="com.example.bookshelf.ui.slideshow.SlideshowFragment"
+        android:label="@string/menu_slideshow"
+        tools:layout="@layout/fragment_slideshow" />
 
-    <fragment android:id="@+id/navi_flight"
-        android:name="com.example.bookshelf.ui.home.HomeFragment"
-        android:label="Fragment4"/>
+    <fragment
+        android:id="@+id/nav_setting"
+        android:name="com.example.bookshelf.ui.setting.SettingsFragment"
+        android:label="@string/menu_setting"
+        tools:layout="@layout/settings_style" />
 </navigation>
