--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -7,345 +7,31 @@
     android:layout_height="match_parent"
     android:background="#00FFFFFF">
 
-    <ScrollView
-        android:id="@+id/scrollView"
+    <FrameLayout
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="88dp">
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/linearLayout"
+    <FrameLayout
+        android:id="@+id/bottomFrameLayout"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="?android:attr/windowBackground"
+            app:menu="@menu/bottom_navigation_menu" />
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.06" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.94" />
-
-            <TextView
-                android:id="@+id/bookName"
-                android:layout_width="340dp"
-                android:layout_height="31dp"
-                android:layout_marginTop="16dp"
-                android:text="モゲます 総集編"
-                android:textAlignment="gravity"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/textSafeIcon"
-                    android:layout_width="86dp"
-                    android:layout_height="28dp"
-                    android:layout_centerInParent="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="4dp"
-                    android:background="@drawable/flame_safe"
-                    android:paddingLeft="4dp"
-                    android:paddingTop="4dp"
-                    android:paddingRight="4dp"
-                    android:paddingBottom="4dp"
-                    android:text="一般向け"
-                    android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp"
-                    app:layout_constraintStart_toStartOf="@+id/bookName"
-                    app:layout_constraintTop_toBottomOf="@+id/bookName" />
-
-                <TextView
-                    android:id="@+id/textSpicyIcon"
-                    android:layout_width="126dp"
-                    android:layout_height="28dp"
-                    android:layout_centerInParent="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="4dp"
-                    android:background="@drawable/flame_spicy"
-                    android:paddingLeft="4dp"
-                    android:paddingTop="4dp"
-                    android:paddingRight="4dp"
-                    android:paddingBottom="4dp"
-                    android:text="過激な表現あり"
-                    android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp"
-                    app:layout_constraintStart_toStartOf="@+id/bookName"
-                    app:layout_constraintTop_toBottomOf="@+id/bookName" />
-
-                <TextView
-                    android:id="@+id/textR-18Icon"
-                    android:layout_width="86dp"
-                    android:layout_height="28dp"
-                    android:layout_centerInParent="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="4dp"
-                    android:background="@drawable/flame_r"
-                    android:paddingLeft="4dp"
-                    android:paddingTop="4dp"
-                    android:paddingRight="4dp"
-                    android:paddingBottom="4dp"
-                    android:text="成人向け"
-                    android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp"
-                    app:layout_constraintStart_toStartOf="@+id/bookName"
-                    app:layout_constraintTop_toBottomOf="@+id/bookName" />
-
-                <TextView
-                    android:id="@+id/textGrotesqueIcon"
-                    android:layout_width="106dp"
-                    android:layout_height="28dp"
-                    android:layout_centerInParent="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="4dp"
-                    android:background="@drawable/flame_grotesque"
-                    android:paddingLeft="4dp"
-                    android:paddingTop="4dp"
-                    android:paddingRight="4dp"
-                    android:paddingBottom="4dp"
-                    android:text="グロテスク"
-                    android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp"
-                    app:layout_constraintStart_toStartOf="@+id/bookName"
-                    app:layout_constraintTop_toBottomOf="@+id/bookName" />
-
-                <TextView
-                    android:id="@+id/textNonIcon"
-                    android:layout_width="86dp"
-                    android:layout_height="28dp"
-                    android:layout_centerInParent="true"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="4dp"
-                    android:background="@drawable/flame_non"
-                    android:paddingLeft="4dp"
-                    android:paddingTop="4dp"
-                    android:paddingRight="4dp"
-                    android:paddingBottom="4dp"
-                    android:text="未入力"
-                    android:textAlignment="center"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp"
-                    app:layout_constraintStart_toStartOf="@+id/bookName"
-                    app:layout_constraintTop_toBottomOf="@+id/bookName" />
+    </FrameLayout>
 
 
-            <ImageView
-                android:id="@+id/BookView"
-                android:layout_width="340dp"
-                android:layout_height="516dp"
-                android:layout_marginTop="36dp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/bookName"
-                app:srcCompat="@drawable/test_pk"
-                tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-            <TextView
-                android:id="@+id/textTitle"
-                android:layout_width="335dp"
-                android:layout_height="28dp"
-                android:layout_marginTop="16dp"
-                android:text="タイトル"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/BookView" />
-
-            <View
-                android:id="@+id/view"
-                android:layout_width="335dp"
-                android:layout_height="1dp"
-                android:background="@color/gray1"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/textTitle" />
-
-            <TextView
-                android:id="@+id/textPublisher"
-                android:layout_width="337dp"
-                android:layout_height="27dp"
-                android:layout_marginTop="8dp"
-                android:text="サークル"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/view" />
-
-            <View
-                android:id="@+id/view2"
-                android:layout_width="335dp"
-                android:layout_height="1dp"
-                android:background="@color/gray1"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/textPublisher" />
-
-            <TextView
-                android:id="@+id/textAuthorName"
-                android:layout_width="335dp"
-                android:layout_height="27dp"
-                android:layout_marginTop="8dp"
-                android:text="作者"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/view2" />
-
-                <View
-                    android:id="@+id/view3"
-                    android:layout_width="335dp"
-                    android:layout_height="1dp"
-                    android:background="@color/gray1"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textAuthorName" />
-
-            <TextView
-                android:id="@+id/textIssuedDate"
-                android:layout_width="335dp"
-                android:layout_height="27dp"
-                android:layout_marginTop="8dp"
-                android:text="発行日"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/view3" />
-
-                <View
-                    android:id="@+id/view4"
-                    android:layout_width="335dp"
-                    android:layout_height="1dp"
-                    android:background="@color/gray1"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textIssuedDate" />
-
-            <TextView
-                android:id="@+id/textRecordDate"
-                android:layout_width="335dp"
-                android:layout_height="27dp"
-                android:layout_marginTop="8dp"
-                android:text="登録日"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/view4" />
-
-                <View
-                    android:id="@+id/view5"
-                    android:layout_width="335dp"
-                    android:layout_height="1dp"
-                    android:background="@color/gray1"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textRecordDate" />
-
-            <TextView
-                android:id="@+id/textBasicGenre"
-                android:layout_width="335dp"
-                android:layout_height="27dp"
-                android:layout_marginTop="8dp"
-                android:text="ジャンル"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/view5" />
-
-                <View
-                    android:id="@+id/view6"
-                    android:layout_width="335dp"
-                    android:layout_height="1dp"
-                    android:background="@color/gray1"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textBasicGenre" />
-
-            <TextView
-                android:id="@+id/textPage"
-                android:layout_width="335dp"
-                android:layout_height="27dp"
-                android:layout_marginTop="8dp"
-                android:text="ページ数"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/view6" />
-
-                <View
-                    android:id="@+id/view7"
-                    android:layout_width="335dp"
-                    android:layout_height="1dp"
-                    android:background="@color/gray1"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textPage" />
-
-            <TextView
-                android:id="@+id/textRating"
-                android:layout_width="335dp"
-                android:layout_height="27dp"
-                android:layout_marginTop="8dp"
-                android:text="対象年齢"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/view7" />
-
-                <View
-                    android:id="@+id/view8"
-                    android:layout_width="335dp"
-                    android:layout_height="1dp"
-                    android:background="@color/gray1"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textRating" />
-
-            <TextView
-                android:id="@+id/textRede"
-                android:layout_width="335dp"
-                android:layout_height="27dp"
-                android:layout_marginTop="8dp"
-                android:text="作品詳細"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/textRating" />
-
-            <TextView
-                android:id="@+id/textRede2"
-                android:layout_width="335dp"
-                android:layout_height="27dp"
-                android:layout_marginTop="4dp"
-                android:text="未入力"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toStartOf="@+id/guideline2"
-                app:layout_constraintStart_toStartOf="@+id/guideline"
-                app:layout_constraintTop_toBottomOf="@+id/textRede" />
-
-                <View
-                    android:id="@+id/view0"
-                    android:layout_width="335dp"
-                    android:layout_height="0dp"
-                    android:layout_marginTop="100dp"
-                    android:background="@color/gray1"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/view8" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
