--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,11 +3,11 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_menu_camera"
-        android:title="スマイル"/>
+        android:title="TOP"/>
     <item
         android:id="@+id/nav_gallery"
         android:icon="@drawable/ic_menu_gallery"
-        android:title="ペット"/>
+        android:title="INFO"/>
     <item
         android:id="@+id/nav_slideshow"
         android:icon="@drawable/ic_menu_slideshow"
