--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -7,13 +7,13 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.bookshelf.ui.home2.Home2Fragment"
+        android:name="com.example.bookshelf.ui.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.bookshelf.ui.home2.Home2Fragment"
+        android:name="com.example.bookshelf.ui.home.HomeFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_create_top" />
 
