--- a/app/src/main/res/layout/recyclerview_item_grid.xml
+++ b/app/src/main/res/layout/recyclerview_item_grid.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/color_from_press_state"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="200dp"
     android:layout_margin="3dp"
     android:id="@+id/list">
 
 
+
+
     <ImageView
         android:id="@+id/sampleImg"
-        android:layout_width="180dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:maxLines="1"
