バーコード取得Toast実装前

--- a/app/src/main/res/layout/fragment_create_top.xml
+++ b/app/src/main/res/layout/fragment_create_top.xml
@@ -14,6 +14,7 @@
         android:layout_height="171dp"
         app:layout_constraintBottom_toTopOf="@+id/button_self"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/graphic_overlay"
         tools:src="@tools:sample/backgrounds/scenic" />
