--- a/app/src/main/res/drawable/button_state.xml
+++ b/app/src/main/res/drawable/button_state.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/button_disabled"
+    <item android:drawable="@drawable/plus"
         android:state_enabled="false"/>
-    <item android:drawable="@drawable/button_pressed"
+    <item android:drawable="@drawable/plus_dark"
         android:state_pressed="true"
         android:state_enabled="true"/>
-    <item android:drawable="@drawable/button_default"
+    <item android:drawable="@drawable/plus"
         android:state_pressed="false"
         android:state_enabled="true"/>
-    <item android:drawable="@drawable/button_disabled"
+    <item android:drawable="@drawable/plus"
         android:state_focused="true" />
 </selector>
