--- a/app/src/main/res/menu/home_navigation_menu.xml
+++ b/app/src/main/res/menu/home_navigation_menu.xml
@@ -7,9 +7,9 @@
     <item
         android:id="@+id/nav_gallery"
         android:icon="@drawable/ic_menu_gallery"
-        android:title="INFO"/>
+        android:title="条件"/>
     <item
         android:id="@+id/nav_slideshow"
         android:icon="@drawable/ic_menu_slideshow"
-        android:title="LINK"/>
+        android:title="検索"/>
 </menu>
